--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint src/ --ext .tsx,.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
-    "eslint": "^8.8.0",
+    "eslint": "^7.32.0",
     "eslint-config-merit": "github:MeritOpenSource/eslint-config-merit#f2c0617cf5b09689ceeb5619fc327b8353a63274",
     "typescript": "^4.5.5"
   }
